# academicbatchtranslate

./: .gitignore  Dockerfile  README.md  README_JP.md  README_VI.md  README_ZH.md  build.spec  full.spec  lite.spec  lite_mac.spec  lite_mac_x86_64.spec  pyproject.toml  run.py  启动.bat  更新日志.txt
.github/workflows/: build-windows-full.yml  build-windows.yml
academicbatchtranslate/: __init__.py  app.py  cli.py  sdk.py
academicbatchtranslate/agents/: __init__.py  agent.py  glossary_agent.py  markdown_agent.py  segments_agent.py
academicbatchtranslate/cacher/: __init__.py  md_based_convert_cacher.py
academicbatchtranslate/context/: md_mask_context.py
academicbatchtranslate/converter/: __init__.py  base.py  converter_identity.py
academicbatchtranslate/core/: factory.py  schemas.py
academicbatchtranslate/exporter/: __init__.py  base.py
academicbatchtranslate/global_values/: __init__.py  conditional_import.py
academicbatchtranslate/glossary/: glossary.py
academicbatchtranslate/ir/: __init__.py  attachment_manager.py  document.py  markdown_document.py
academicbatchtranslate/logger/: __init__.py  logger.py
academicbatchtranslate/mcp/: README.md  __init__.py  __main__.py  server.py
academicbatchtranslate/progress/: __init__.py
academicbatchtranslate/server/: __init__.py  core.py
academicbatchtranslate/static/: index.html
academicbatchtranslate/template/: markdown.html  markdown_premium.html
academicbatchtranslate/translator/: __init__.py  base.py
academicbatchtranslate/utils/: docling_utils.py  json_utils.py  markdown_splitter.py  markdown_utils.py  resource_utils.py  utils.py
academicbatchtranslate/workflow/: __init__.py  ass_workflow.py  base.py  docx_workflow.py  epub_workflow.py  html_workflow.py  interfaces.py  json_workflow.py  md_based_workflow.py  pptx_workflow.py  srt_workflow.py  txt_workflow.py  xlsx_workflow.py
docutranslate/: __init__.py  app.py  cli.py  sdk.py
docutranslate/agents/: __init__.py  agent.py  glossary_agent.py  markdown_agent.py  segments_agent.py
docutranslate/cacher/: __init__.py  md_based_convert_cacher.py
docutranslate/context/: md_mask_context.py
docutranslate/converter/: base.py  converter_identity.py
docutranslate/core/: factory.py  schemas.py
docutranslate/exporter/: base.py
docutranslate/global_values/: __init__.py  conditional_import.py
docutranslate/glossary/: glossary.py
frontend/: .env.production  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.js  vite.config.ts
tests/: README.md  conftest.py
(+193 files in other folders)
